fix: remove info hover style on mobile screens

--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -9,6 +9,9 @@
   justify-content: center;
   cursor: pointer;
   transition: 0.2s;
+  & .info {
+    display: none;
+  }
   &:hover {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     transform: translate3d(2px, 2px, 0);
@@ -16,28 +19,6 @@
   & img.foreground-image {
     transition: 0.2s;
     opacity: 1;
-  }
-  &:hover img.foreground-image {
-    animation: BlurFadeOut;
-    animation-duration: 200ms;
-    animation-fill-mode: both;
-  }
-  & .info {
-    position: absolute;
-    opacity: 0;
-  }
-  &:hover .info {
-    animation: InfoFadeIn;
-    animation-duration: 0.3s;
-    animation-fill-mode: both;
-    animation-delay: 0.2s;
-    background: rgba(0, 0, 0, 0.7);
-    color: white;
-    content: "";
-    text-align: center;
-    font-size: 2em;
-    height: 100%;
-    width: 100%;
   }
 }
 
@@ -61,5 +42,33 @@
   to {
     opacity: 1;
     filter: blur(0);
+  }
+}
+
+@media (min-width: 1025px) {
+  .card {
+    &:hover img.foreground-image {
+      animation: BlurFadeOut;
+      animation-duration: 200ms;
+      animation-fill-mode: both;
+    }
+    & .info {
+      display: flex;
+      position: absolute;
+      opacity: 0;
+    }
+    &:hover .info {
+      animation: InfoFadeIn;
+      animation-duration: 0.3s;
+      animation-fill-mode: both;
+      animation-delay: 0.2s;
+      background: rgba(0, 0, 0, 0.7);
+      color: white;
+      content: "";
+      text-align: center;
+      font-size: 2em;
+      height: 100%;
+      width: 100%;
+    }
   }
 }
